welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:6: error: '(' expected but '{' found.
  }else if {
           ^